fix(NotifyConversion-pagestyles): improve dark mode display

--- a/src/NotifyConversion-pagestyles/NotifyConversion-pagestyles.less
+++ b/src/NotifyConversion-pagestyles/NotifyConversion-pagestyles.less
@@ -1,5 +1,3 @@
-@import '../variables.less';
-
 .gadget-notify_conversion {
 	&__title {
 		margin: 0.5em auto;
@@ -10,14 +8,13 @@
 
 		&_extend,
 		&_privacy-notice {
-			color: @const-color-gray;
 			font-size: 90%;
 		}
 	}
 
 	&__selection {
 		display: flex;
-		gap: 0.6em;
+		gap: 0.5em;
 		flex-wrap: wrap;
 	}
 }
